Add preload attribute to music audio element
Added preload attribute to audio element.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ textarea {
 <body onclick="enableMusic()">
 
 <!-- 🎵 MUSIC -->
-<audio id="music" loop>
+<audio id="music" loop preload="auto">>
   <source src="./UntilIFoundYou.mp3" type="audio/mpeg">
 </audio>
 
