--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ textarea {
 
 <!-- 🎵 MUSIC -->
 <audio id="music" loop preload="auto">>
-  <source src="./UntilIFoundYou.mp3" type="audio/mpeg">
+  <source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <!-- PAGE 1 -->
