--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@ textarea {
 <audio id="bgmusic" >
   <source src="music.mp3" type="audio/mpeg">
 </audio>
-<button id="playBtn" style="
 
 
 
@@ -78,7 +77,7 @@ textarea {
 <div class="page active" id="p1">
   <h1>Hey You 🤍</h1>
   <p>I made this only for you.</p>
-  <button onclick="go('p2')">Open 🤍</button >
+  <button onclick="go('p2')">Open 🤍</button ></p>
   <button id="playBtn" style="
   padding:14px 28px;
   font-size:17px;
