--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ textarea {
 </head>
 
   <body>
-<audio id="bgmusic" >
+<audio id="music" >
   <source src="music.mp3" type="audio/mpeg">
 </audio>
 
@@ -155,7 +155,7 @@ function sendMsg() {
 setInterval(() => {
   const h = document.createElement("div");
   h.className = "heart";
-  h.innerHTML = "💖";
+  h.innerHTML = "💖""❤️";
   h.style.left = Math.random() * 100 + "vw";
   document.body.appendChild(h);
   setTimeout(() => h.remove(), 6000);
@@ -163,7 +163,7 @@ setInterval(() => {
 </script>
 <script>
   const btn = document.getElementById("playBtn");
-  const music = document.getElementById("bgMusic");
+  const music = document.getElementById("music");
 
   btn.addEventListener("click", () => {
     music.play();
